# TsallisNetwork

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  example.json  example_2.json  heatmap_corrigido.py
data/: all_data.txt  all_data_bp.txt
scripts/: N_5000_multithread_pc.sh  loop_bash.sh
scripts/.ipynb_checkpoints/: teste-checkpoint.ipynb
scripts/jupyter/: a.ipynb  analise_r_powerlaw.ipynb  assortativity.ipynb  complexity_run.ipynb  distances.ipynb  distributions.ipynb  expansive_file.txt  gml.ipynb  log_binning.ipynb  network_plot.ipynb  new_data.csv  parms.txt  parms_new_data.ipynb  rest_parms.txt  script_cluster.ipynb  script_multithread_pc.ipynb  shortespath.ipynb  surface_properties.ipynb  test_par.ipynb  teste power_law.ipynb  teste.txt  teste_ks.py  teste_new_assort.ipynb  testes_short_fit.ipynb
scripts/jupyter/.ipynb_checkpoints/: create_dataframe_properties-checkpoint.ipynb  distributions-checkpoint.ipynb  gml-checkpoint.ipynb  script_multithread_pc-checkpoint.ipynb  shortespath-checkpoint.ipynb  shortespath_backup-checkpoint.ipynb  teste power_law-checkpoint.ipynb  teste_gml-checkpoint.ipynb
scripts/jupyter/src/: Distributions.py  FunctionsAssortativity.py  FunctionsNetworkPlot.py  FunctionsProperties.py  FunctionsSurface.py  teste.ipynb
scripts/python/: Compile.py  DistributionsPlot.py  FilesGen.py  assortativity_multithread.py  json_generate.py  multithread_pc.py  new_data.csv  power_law.py  properties_data.py  run_assortativity.py  shortest_test.py  teste.py
src/: SamuraI.cpp  SamuraI.hpp  SamuraIConfig.hpp  eigen_vec.hpp  main.cpp  randUtils.cpp  randUtils.hpp
(+7 files in other folders)
